# docs/swagger.json
@@ -494,8 +494,12 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "成功删除场景"
+                    "200": {
+                        "description": "成功删除场景",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
                     },
                     "404": {
                         "description": "场景不存在",
